<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">Cards</string>

    <!-- Card  -->
    <string name="answer_button_text">Check answer</string>
    <string name="question_text">Tree</string>
    <string name="answer_text">Árbol</string>
    <string name="check_answer">Check Answer</string>

    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="hard_button_title">Hard</string>

    <string name="info_text_view_message">Remaining cards</string>
    <string name="due_cards_format">%d remaining cards</string>
    <string name="subtitle_text">Tap to study</string>
    <string name="review_cards_text">Review cards</string>
    <string name="no_more_cards_toast_message">No more cards to review</string>

    <string name="accept_card_edit_button_title">Accept</string>
    <string name="cancel_card_edit_button_title">Cancel</string>

    <string name="question">Question</string>
    <string name="answer">Answer</string>

    <string name="new_card_fab_description">Add new card</string>
    <string name="added_card">Card added</string>

    <string name="card_question_hint">Write the question text</string>
    <string name="card_answer_hint">Write the answer text</string>

    <!-- Menu -->
    <string name="decks_nav_menu_title">Decks</string>
    <string name="study_nav_menu_title">Review cards</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="about_nav_menu_title">About</string>
    <string name="settings_menu_title">Settings</string>
    <string name="logout_menu_title">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference -->
    <string name="decks_header">Decks</string>
    <string name="max_number_cards">Maximum number of cards</string>
    <string name="board_title">Show board</string>
    <string name="board_summary_on">Board available</string>
    <string name="board_summary_off">Board unavailable</string>

    <!-- Deck -->
    <string name="new_deck_fab_description">Add new deck</string>
    <string name="deck_card_number">Total number of cards: </string>
    <string name="deck_review_card_number">Number of reviewed cards: </string>
    <string name="deck_edit_button">Edit deck</string>
    <string name="deck_delete_button">Delete deck</string>
    <string name="deck_review_button">Review cards</string>
    <string name="deck_card_button">View cards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deck_edit_name">Name of the deck</string>
    <string name="deck_name_hint">Write the name of the deck</string>
    <string name="accept_deck_edit_button_title">Accept</string>
    <string name="cancel_deck_edit_button_title">Cancel</string>
    <string name="empty_field">The field cannot be empty</string>


</resources>