<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DeckEditFragment">

    <data>
        <variable
            name="deck"
            type="com.example.cards.decks.Deck" />
    </data>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deck_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:text="@string/deck_edit_name"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="20pt"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deck_name_edit_text"
                android:hint="@string/deck_name_hint"
                android:text="@{deck.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/deck_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_deck_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:text="@string/cancel_deck_edit_button_title" />

            <Button
                android:id="@+id/accept_deck_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:text="@string/accept_deck_edit_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

</layout>