<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="deck"
            type="com.example.cards.decks.Deck" />
        <variable
            name="cardNum"
            type="int"/>
        <variable
            name="dueCards"
            type="int"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        app:cardBackgroundColor="@color/cardview_light_background">


        <RelativeLayout
            android:id="@+id/deck_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/deck_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@{deck.name}"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:paddingTop="8dp"
                tools:text="Name"/>

            <TextView
                android:id="@+id/deck_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/deck_name"
                android:text="@string/deck_card_number"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:paddingTop="8dp"
                tools:text="Total number of cards"/>

            <TextView
                android:id="@+id/list_item_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/deck_card_number"
                android:text="@string/deck_review_card_number"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:paddingTop="8dp"
                tools:text="Number of reviewed cards"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/list_item_answer"
                android:paddingTop="10dp">

                <ImageButton
                    android:id="@+id/deck_review_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:src="@drawable/ic_baseline_play_circle_filled_24"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/deck_review_button"/>

                <ImageButton
                    android:id="@+id/deck_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/deck_edit_button"
                    app:tint="@color/black"/>

                <ImageButton
                    android:id="@+id/deck_cards_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_list_alt_24"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/deck_card_button"
                    app:tint="@color/black"/>

                <ImageButton
                    android:id="@+id/deck_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/deck_delete_button"
                    app:tint="@color/black"/>

            </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>