<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.cards.StudyViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.card == null ? View.INVISIBLE : View.VISIBLE}">

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@{@string/due_cards_format(viewModel.nDueCards)}"
            android:textSize="20dp"
            tools:text="@string/info_text_view_message"
            android:layout_marginTop="10pt"/>

        <com.example.cards.BoardView
            android:id="@+id/board_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/info_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="50dp"
            android:background="@color/purple_200" />

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/board_view"
            android:layout_centerHorizontal="true"
            android:text="@{viewModel.card.question}"
            android:textSize="20dp"
            tools:text="Text of the question" />

        <View
            android:id="@+id/separator_view"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/separator_view"
            android:textSize="20dp"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:text="@{viewModel.card.answer}"
            tools:text="Text of the answer"/>

        <Button
            android:id="@+id/answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_text_view"
            android:visibility="@{viewModel.card.answered ? View.INVISIBLE : View.VISIBLE}"
            android:text="@string/check_answer"/>

        <LinearLayout
            android:id="@+id/difficulty_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            >

            <Button
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/hard_button_title">
            </Button>

            <Button
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/doubt_button_title">
            </Button>

            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/easy_button_title">
            </Button>

        </LinearLayout>

    </RelativeLayout>

</layout>
